hard-gists/e7b0bc65927b7987b7d4/run.log
=== Docker Run Log for e7b0bc65927b7987b7d4 ===
Started at: Mi 29. Okt 20:47:50 CET 2025

[2025-10-29 20:47:51] START: Running container for e7b0bc65927b7987b7d4
[2025-10-29 20:47:51] SUCCESS: Container c243aea5399661d6b816e16d5b5cca69aa6155c890e077e714050b09b4dc79cb started for e7b0bc65927b7987b7d4
=== Container logs for e7b0bc65927b7987b7d4 ===
  File "/snippet.py", line 7
    print sha1_fingerprint
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e7b0bc65927b7987b7d4 ===
[2025-10-29 20:47:53] INFO: Container c243aea5399661d6b816e16d5b5cca69aa6155c890e077e714050b09b4dc79cb has stopped
